--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header" fxLayout="row" fxLayoutAlign="center center">
-    <div style="width: 300px;" fxLayout="row" fxLayoutAlign="center center">
+    <div style="width: 240px;" fxLayout="row" fxLayoutAlign="start center">
         <div fxLayout="row">
             <a routerLink="/">
                 <h1>Movies</h1>
