--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -40,6 +40,10 @@ h2 {
     margin: 0;
 }
 
+h3 {
+    margin: 0;
+}
+
 /* Grouping content
      ========================================================================== */
 
