--- a/src/app/components/movies/movies.component.scss
+++ b/src/app/components/movies/movies.component.scss
@@ -2,27 +2,10 @@
     padding-bottom: 2.8rem;
 }
 
-.movies-footer {
-    padding: 2.8rem 0 1.4rem;
-}
-
-.movie-details {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.movie-details .attachment {
-    position: relative;
-    height: 100%;
-    box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .2);
-    border-radius: 2px;
-}
-
-.attachment .thumbnail {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.movies-title {
+    font-weight: normal;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, .65);
 }
 
 .movie-details-overlay {
@@ -42,32 +25,6 @@
     opacity: 1;
 }
 
-.movie-details-progressbar {
-    position: absolute;
-    top: 0;
-    height: 3px;
-    z-index: 1;
-}
-
-::ng-deep .movie-details-progressbar .mat-progress-bar-background {
-    fill: transparent;
-}
-
-::ng-deep .movie-details-progressbar .mat-progress-bar-buffer {
-    background-color: transparent;
-}
-
-footer.movie-details {
-    padding: .75rem 0;
-    box-sizing: border-box;
-    max-height: 50px;
-}
-
-footer.movie-details a {
-    color: inherit;
-    text-decoration: none;
-}
-
 .movies-gallery {
     width: 100%;
     display: grid;
@@ -82,9 +39,9 @@ footer.movie-details a {
 .movie-item {
     position: relative;
     overflow: hidden;
+    width: 300px;
+    height: 200px; // box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0.26);
     cursor: pointer;
-    height: 200px;
-    box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0.26);
 }
 
 .movie-item:after {
@@ -112,6 +69,24 @@ footer.movie-details a {
     padding: .25rem;
 }
 
+footer.movie-details {
+    padding: .75rem 0;
+    box-sizing: border-box;
+    max-height: 50px;
+}
+
+.movie-link {
+    line-height: 1.5;
+    color: inherit;
+    text-decoration: none;
+    color: rgba(0, 0, 0, .65);
+}
+
+.movie-link:hover {
+    text-decoration: underline;
+    color: rgba(0, 0, 0, .87);
+}
+
 // .movie-item img.movie-thumbnail,
 // .movie-item video.movie-thumbnail {
 //     max-width: 100%;
@@ -125,3 +100,6 @@ footer.movie-details a {
 //     -webkit-transform: scale(1.1);
 //     transform: scale(1.1);
 // }
+.movies-footer {
+    padding: 4.2rem 0 1.4rem 0;
+}
