--- a/src/app/components/studio-list/studio-list.component.html
+++ b/src/app/components/studio-list/studio-list.component.html
@@ -1,5 +1,5 @@
-<header class="studios-header">
-    <h2 class="studios-title">Studios</h2>
+<header class="sidebar-header">
+    <h3 class="sidebar-title">Studios</h3>
 </header>
 <main fxLayout="column">
     <mat-nav-list>
