--- a/src/app/components/studio-list/studio-list.component.scss
+++ b/src/app/components/studio-list/studio-list.component.scss
@@ -1,41 +1,5 @@
-.studios-header {
-    padding: 0 .75rem 1.4rem 1rem;
-}
-
-.studios-title {
-    font-weight: normal;
-    text-transform: uppercase;
-    color: rgba(0, 0, 0, .65);
-}
-
-.mat-list .mat-list-item,
-.mat-list .mat-list-option,
-.mat-nav-list .mat-list-item,
-.mat-nav-list .mat-list-option,
-.mat-selection-list .mat-list-item,
-.mat-selection-list .mat-list-option {
-    height: 40px;
-}
-
-.mat-list-option {
-    font-size: 1em;
-}
-
-.mat-nav-list {
-    padding-top: 0;
-}
-
-.mat-nav-list .mat-list-item {
-    font-size: 1em; // padding: .75rem 0;
-    -webkit-transition: border-color .2s ease-in-out;
-    -moz-transition: border-color .2s ease-in-out;
-    -ms-transition: border-color .2s ease-in-out;
-    -o-transition: border-color .2s ease-in-out;
-    transition: border-color .2s ease-in-out;
-    border-left: 2px solid transparent;
-}
-
 .mat-nav-list .mat-list-item.active {
-    border-left-color: crimson;
-    background-color: rgba(220, 20, 60, .1);
+    border-left-color: crimson; // background-color: rgba(220, 20, 60, .1);
+    background-color: #fafafa;
+    color: rgba(220, 20, 60, .86);
 }
