--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -5,18 +5,10 @@
         </div>
     </header>
 
-    <!-- <main class="main" fxLayout="row" fxLayoutAlign="center start">
-        <div style="width: 300px; background: rgb(250, 250, 250); position: absolute; left: 0; padding: .75rem;">
-            <movies-studio-list></movies-studio-list>
-        </div>
-        <div class="container" fxFlex>
-            <router-outlet></router-outlet>
-        </div>
-    </main> -->
     <main class="main">
         <mat-sidenav-container class="sidenav-container">
             <mat-sidenav #sidenav mode="side" opened="true" style="width: 240px; background: rgb(245, 245, 245);">
-                <!-- <div style="padding-top: 2.8rem; border-bottom: 1px solid #eaeaea;">
+                <!-- <div style="padding-top: 2.8rem;">
                     <mat-nav-list>
                         <mat-list-item>
                             Home
@@ -28,6 +20,22 @@
                 </div> -->
                 <div style="padding-top: 2.8rem;">
                     <movies-studio-list></movies-studio-list>
+                </div>
+                <div style="padding-top: 2.8rem;">
+                    <header class="sidebar-header">
+                        <h3 class="sidebar-title">CATEGORIES</h3>
+                    </header>
+                    <mat-nav-list>
+                        <mat-list-item>
+                            Stockings
+                        </mat-list-item>
+                        <mat-list-item>
+                            Orgasm
+                        </mat-list-item>
+                        <mat-list-item>
+                            Lanafeshchuk
+                        </mat-list-item>
+                    </mat-nav-list>
                 </div>
                 <footer class="footer" fxLayout="row" fxLayoutAlign="center center">
                     <div class="container">
