--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,16 +7,11 @@
             <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
         </div>
     </div>
-    <div style="box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center center" fxFlex>
+    <div fxLayout="row" fxLayoutAlign="center center" fxFlex>
         <div class="container">
-            <!-- <div class="navigation" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar" fxFlex>
-                <button mat-button class="active">Home</button>
-                <button mat-button>Sites</button>
-                <button mat-button>Categories</button>
-            </div> -->
             <div fxLayout="row" fxLayoutAlign="end center" fxFlex>
                 <form (ngSubmit)="searchMovies()" [formGroup]="formGroup">
-                    <input formControlName="searchQuery" class="search" [class.active]="showSearchBar" type="text" placeholder="Search">
+                    <input class="search"  #searchInput formControlName="searchQuery" [class.active]="showSearchBar" type="text" placeholder="Search">
                 </form>
                 <button (click)="showSearch()" style="background: transparent; border: none; padding: 0; margin: 0; outline: none; cursor: pointer;">
                     <mat-icon *ngIf="!showSearchBar">search</mat-icon>
