--- a/src/app/components/shared/pagination/pagination.component.scss
+++ b/src/app/components/shared/pagination/pagination.component.scss
@@ -9,6 +9,6 @@
 }
 
 .pagination .mat-button.btn-page.active {
-    background-color: #2196f3;
-    color: rgba(255, 255, 255, .86);
+    background-color: crimson;
+    color: rgba(255, 255, 255, .87);
 }
