--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,22 @@
 <header class="header" fxLayout="row" fxLayoutAlign="center center">
-    <div style="width: 240px;" fxLayout="row" fxLayoutAlign="start center">
-        <div fxLayout="row">
+    <div style="width: 240px;" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar || !mobile">
+        <div style="padding-right: .7rem;">
+            <button mat-icon-button (click)="showMenu()">
+                <mat-icon>menu</mat-icon>
+            </button>
+        </div>
+        <div fxLayout="row" *ngIf="!mobile">
             <a routerLink="/">
                 <h1>Movies</h1>
             </a>
             <span style="color: crimson; font-weight: bold; font-size: 2em;">.</span>
         </div>
     </div>
-    <div fxLayout="row" fxLayoutAlign="center center" fxFlex>
+    <div fxLayout="row" fxLayoutAlign="center center" style="width: 100%;">
         <div class="container">
             <div fxLayout="row" fxLayoutAlign="end center" fxFlex>
                 <form (ngSubmit)="searchMovies()" [formGroup]="formGroup">
-                    <input class="search"  #searchInput formControlName="searchQuery" [class.active]="showSearchBar" type="text" placeholder="Search">
+                    <input class="search" #searchInput formControlName="searchQuery" [class.active]="showSearchBar" type="text" placeholder="Search" (blur)="searchFocusLost()">
                 </form>
                 <button (click)="showSearch()" style="background: transparent; border: none; padding: 0; margin: 0; outline: none; cursor: pointer;">
                     <mat-icon *ngIf="!showSearchBar">search</mat-icon>
