--- a/src/app/components/movie-details/movie-details.component.scss
+++ b/src/app/components/movie-details/movie-details.component.scss
@@ -1,12 +1,45 @@
-.watch-container {
-    width: 100%;
-}
-
-.video-container {
-    width: 100%;
-}
-
 .video-container video {
+    max-height: 75vh;
+    padding-bottom: 1.4rem;
     width: 100%;
-    padding-bottom: 2.8rem;
+}
+
+.video-container__details {
+    padding-bottom: 1.4rem;
+}
+
+.title {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.tags {
+    margin: 0;
+    list-style-type: none;
+    display: inline-flex;
+    padding: 0;
+    padding-bottom: .75rem;
+}
+
+.tag {
+    padding-right: .25rem;
+    color: rgba(220, 20, 60, .86);
+    padding-right: .25rem;
+    text-decoration: none;
+}
+
+.tag a {
+    color: inherit;
+    padding: inherit;
+    text-decoration: inherit;
+}
+
+.tag:hover {
+    text-decoration: underline;
+}
+
+.description {
+    line-height: 1.5;
+    color: rgba(0, 0, 0, .65);
+    width: 50%;
 }
