--- a/src/app/components/shared/movie-dialog/movie-dialog.component.html
+++ b/src/app/components/shared/movie-dialog/movie-dialog.component.html
@@ -1,4 +1,7 @@
 <div class="video-preview" mat-ripple (click)="play()">
+    <header class="video-preview--header">
+        <span class="video-preview--title">lanafeshchuk - red high heels and nude stockings</span>
+    </header>
     <video #video class="video-preview--video" autoplay loop controls>
         <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
     </video>
