--- a/src/app/layout/movies-layout.component.html
+++ b/src/app/layout/movies-layout.component.html
@@ -1,13 +1,13 @@
 <div class="page-wrapper" fxLayout="column" fxLayoutAlign="start center">
     <header class="header" fxLayout="row" fxLayoutAlign="center center">
         <div style="width: 100%;">
-            <movies-header></movies-header>
+            <movies-header (menuOpened)="openMenu()"></movies-header>
         </div>
     </header>
 
     <main class="main">
         <mat-sidenav-container class="sidenav-container">
-            <mat-sidenav #sidenav mode="side" opened="true" style="width: 240px; background: rgb(245, 245, 245);">
+            <mat-sidenav class="sidenav" [mode]="menuMode" [opened]="menuOpened">
                 <!-- <div style="padding-top: 2.8rem;">
                     <mat-nav-list>
                         <mat-list-item>
@@ -21,29 +21,23 @@
                 <div style="padding-top: 2.8rem;">
                     <movies-studio-list></movies-studio-list>
                 </div>
-                <div style="padding-top: 2.8rem;">
+                <!-- <div style="padding-top: 2.8rem;">
                     <header class="sidebar-header">
                         <h3 class="sidebar-title">CATEGORIES</h3>
                     </header>
                     <mat-nav-list>
                         <mat-list-item>
-                            Stockings
-                        </mat-list-item>
-                        <mat-list-item>
-                            Orgasm
-                        </mat-list-item>
-                        <mat-list-item>
-                            Lanafeshchuk
+                            #stockings
                         </mat-list-item>
                     </mat-nav-list>
-                </div>
+                </div> -->
                 <footer class="footer" fxLayout="row" fxLayoutAlign="center center">
                     <div class="container">
                         <span class="copyright">© 2018 Movies</span>
                     </div>
                 </footer>
             </mat-sidenav>
-            <mat-sidenav-content style="height: calc(100vh - 60px); padding: 2.8rem 0 1.4rem 0; box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center start">
+            <mat-sidenav-content style="height: calc(100vh - 60px); padding: 2.8rem 1.4rem 1.4rem; box-sizing: border-box;" fxLayout="row" fxLayoutAlign="center start">
                 <div class="container">
                     <router-outlet></router-outlet>
                 </div>
