--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -107,6 +107,10 @@ strong {
     font-weight: bolder;
 }
 
+p {
+    margin: 0;
+}
+
 /**
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
