--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header" fxLayout="row" fxLayoutAlign="center center">
-    <div style="width: 240px;" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar || !mobile">
+    <div style="min-width: 240px;" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar || !mobile">
         <div style="padding-right: .7rem;">
             <button mat-icon-button (click)="showMenu()">
                 <mat-icon>menu</mat-icon>
