--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,8 @@
 .header {
     background: white;
     box-shadow: 0 3px 8px -4px rgba(0, 0, 0, .26); // border-bottom: 1px solid #eaeaea;
-    padding: .7rem 1.4rem .7rem .7rem;
+    // padding: .7rem 1.4rem .7rem .7rem;
+    padding: .7rem;
 }
 
 .header a {
