--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,20 +15,23 @@ form {
 }
 
 .search {
+    background: rgb(245, 245, 245);
+    border-radius: 2px;
+    padding: .7rem 1rem;
+    box-sizing: border-box;
+    line-height: normal;
     font-family: 'Open Sans', sans-serif;
     border: none;
     font-size: 1.2em;
-    padding: .7rem 0;
     outline: none;
     font-weight: lighter;
     width: 100%;
-    opacity: 0;
+    opacity: 1;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    transform: scaleX(0);
+    transition: all .2s ease-in-out; // transform: scaleX(0);
 }
 
 .search.active {
