--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -11,7 +11,8 @@
 <div class="video-container" *ngIf="movie">
     <video controls>
         <!-- <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4"> -->
-        <source src="{{directUri}}">
+        <!-- <source src="{{directUri}}"> -->
+        <!-- <source src="http://localhost:12125/v1/movies/stream?url=https://c6.trafficdeposit.com/bvideo/gGdhavSPF2vLj1QfnTD2Qw/1535584173/57d2f694dd228/5b86dd5149319.mp4"> -->
     </video>
     <div class="video-container__details" fxLayout="row" fxLayoutAlign="space-between center">
         <span class="title">{{movie.title}}</span>
@@ -24,8 +25,10 @@
             </li>
         </ul>
         <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa
             qui officia deserunt mollit anim id est laborum
         </p>
     </div>
