--- a/src/app/components/shared/movie-dialog/movie-dialog.component.html
+++ b/src/app/components/shared/movie-dialog/movie-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="video-preview" mat-ripple (click)="play()">
+<div class="video-preview" (click)="play()">
     <header class="video-preview--header">
         <span class="video-preview--title">Lanafeshchuk - Sex in high heels and Stockings</span>
     </header>
