--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header" fxLayout="row" fxLayoutAlign="space-between center">
-    <div style="min-width: 250px;" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar || !mobile">
+    <div style="min-width: calc(240px - 0.7rem);" fxLayout="row" fxLayoutAlign="start center" *ngIf="!showSearchBar || !mobile">
         <div style="padding-right: .7rem;">
             <button mat-icon-button (click)="showMenu()">
                 <mat-icon>menu</mat-icon>
@@ -25,19 +25,22 @@
             </div>
         </div>
     </div> -->
-    <div fxLayout="row" fxLayoutAlign="center center" style="width: 100%;">
-        <div class="container">
-            <div style="max-width: 50%;">
-                <form (ngSubmit)="searchMovies()" [formGroup]="formGroup" style="display: inline-flex;">
-                    <input class="search" #searchInput formControlName="searchQuery" type="text" placeholder="Search" (blur)="searchFocusLost()">
-                    <button type="submit" style="border: none;">
-                        <mat-icon>search</mat-icon>
-                    </button>
-                </form>
-            </div>
+    <!-- <div fxLayout="row" fxLayoutAlign="center center">
+
+    </div> -->
+    <div class="container">
+        <div style="max-width: 50%;">
+            <form (ngSubmit)="searchMovies()" [formGroup]="formGroup" style="display: inline-flex;">
+                <input class="search" #searchInput formControlName="searchQuery" type="text" placeholder="Search" (blur)="searchFocusLost()">
+                <button type="submit" style="border: none;">
+                    <mat-icon>search</mat-icon>
+                </button>
+            </form>
         </div>
     </div>
-    <div>
-        <button mat-button (click)="signIn()" color="primary">Sign In</button>
-    </div>
+    <button mat-button *ngIf="currentUser">
+        <span style="font-size: .9em; padding-right: .5rem;">Signed in as <b>{{currentUser.email}}</b></span>
+        <img style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" [src]="currentUser.picture" alt="user-avatar"/>
+    </button>
+        <button mat-flat-button (click)="signIn()" color="primary" *ngIf="!currentUser">Sign In</button>
 </header>
