--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -10,10 +10,10 @@
     <div class="movies-gallery" [class.loading]="isLoading">
         <div *ngFor="let movie of movies.data; trackBy: trackMovie;">
             <div mat-ripple class="movie-item" (mouseenter)="mouseenter(movie)" (mouseleave)="mouseleave(movie)" (click)="preview(movie)">
-                <!-- <img class="movie-thumbnail" [src]="movie.attachments[0]?.uri" alt="media-image" *ngIf="!isVideo(movie.attachments[0]?.uri)">
+                <img class="movie-thumbnail" [src]="movie.attachments[0]?.uri" alt="media-image" *ngIf="!isVideo(movie.attachments[0]?.uri)">
                 <video class="movie-thumbnail" *ngIf="isVideo(movie.attachments[0]?.uri)" loop autoplay muted>
                     <source src="{{movie.attachments[0]?.uri}}">
-                </video> -->
+                </video>
 
                 <!-- <img class="movie-thumbnail" src="https://instagram.fdnk1-1.fna.fbcdn.net/vp/d8279b3aadecd24f61ae23dd97958c9c/5C252492/t51.2885-15/e35/38833152_236321767077355_1624871769724682240_n.jpg?_nc_eui2=AeFDX-6PsBxXEMM_ktzVM8_43SVYpWVQA1IAFzcO5748QdwI9JSg0GoopvkNHzgzAFahbW-2mrsQJ7sUstfWaj9Fn_n3D_wfd1ewTDGh7o4MXg" [hidden]="isVideo(movie.attachments[movie.selectedAttachment]?.url)"> -->
                 <!-- <img class="movie-thumbnail" src="https://res.cloudinary.com/dpfmyl1mn/image/upload/v1531688331/photocloud/prod/lanafeshchuk/hn8swc9taiasrctj1mqz.jpg" [hidden]="isVideo(movie.attachments[movie.selectedAttachment]?.url)">
@@ -34,5 +34,5 @@
     </div>
 </main>
 <footer class="movies-footer" fxLayout="row" fxLayoutAlign="center center" *ngIf="movies && movies.data">
-    <movies-pagination [pageSize]="12" [total]="movies.total" [currentPage]="pageIndex" (changed)="pageChanged($event)"></movies-pagination>
+    <movies-pagination [pageSize]="movies.size" [total]="movies.total" [currentPage]="pageIndex" (changed)="pageChanged($event)"></movies-pagination>
 </footer>
