--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,8 +45,9 @@ body {
     padding: .75rem;
 }
 
-.mat-list-option {
-    font-size: 1em;
+.mat-list-option,
+.mat-list-option:not(.mat-list-item-disabled) {
+    font-size: .9em !important;
 }
 
 .mat-nav-list {
@@ -54,7 +55,6 @@ body {
 }
 
 .mat-nav-list .mat-list-item {
-    font-size: 1em !important; // padding: .75rem 0;
     -webkit-transition: border-color .2s ease-in-out;
     -moz-transition: border-color .2s ease-in-out;
     -ms-transition: border-color .2s ease-in-out;
@@ -62,6 +62,15 @@ body {
     transition: border-color .2s ease-in-out;
     border-left: 2px solid transparent;
     box-sizing: border-box;
+}
+
+.mat-list .mat-list-item .mat-list-item-content-reverse,
+.mat-list .mat-list-option .mat-list-item-content-reverse,
+.mat-nav-list .mat-list-item .mat-list-item-content-reverse,
+.mat-nav-list .mat-list-option .mat-list-item-content-reverse,
+.mat-selection-list .mat-list-item .mat-list-item-content-reverse,
+.mat-selection-list .mat-list-option .mat-list-item-content-reverse {
+    padding: 0 1.4rem !important;
 }
 
 .movie-dialog-container .mat-dialog-container {
