--- a/src/app/components/shared/movie-dialog/movie-dialog.component.html
+++ b/src/app/components/shared/movie-dialog/movie-dialog.component.html
@@ -1,8 +1,8 @@
 <div class="video-preview" (click)="play()">
     <header class="video-preview--header">
-        <span class="video-preview--title">Lanafeshchuk - Sex in high heels and Stockings</span>
+        <span class="video-preview--title">{{title}}</span>
     </header>
     <video #video class="video-preview--video" autoplay loop controls>
-        <source src="https://res.cloudinary.com/dpfmyl1mn/video/upload/v1507137526/photocloud/prod/lanafeshchuk/svug6bgevnebjbndgfpt.mp4">
+        <source [src]="uri">
     </video>
 </div>
